examples/06-load-balancing/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lb-demo
  labels:
    istio-injection: enabled
