examples/06-load-balancing/deployment.yaml
# 3 replicas to demonstrate load balancing
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: lb-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: lb-demo
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: httpbin
